# Skypro-OOP-Practices

./: .flake8  README.md  main.py  pyproject.toml
src/: classes.py
tests/: conftest.py  test_classes.py
